--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@nestjs/apollo": "^12.0.11",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.5",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
