--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.5",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
