fix. 트리거 되는 브랜치 변경

--- a/.github/workflows/ecr_push.yml
+++ b/.github/workflows/ecr_push.yml
@@ -3,7 +3,7 @@ name: push docker image to AWS ECR
 on:
   push:
     branches:
-      - master
+      - ['prd']
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
