--- a/.github/workflows/ecr_push.yml
+++ b/.github/workflows/ecr_push.yml
@@ -3,7 +3,8 @@ name: push docker image to AWS ECR
 on:
   push:
     branches:
-      - [master, prd]
+      - master
+      - prd
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
